--- a/src/GPS_Shadow_Tracker_Web/templates/index.html
+++ b/src/GPS_Shadow_Tracker_Web/templates/index.html
@@ -20,6 +20,15 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <h1>MAP APP</h1>
+        <div>
+            <form id="timeSelect">
+                <label for="startTime">Start Time</label>
+                <input type="time" id="start">
+                <label for="endTime">End Time</label>
+                <input type="time" id="end">
+                <input type="submit" id="submitButton">
+            </form>
+        </div>
         <div id="map"></div>
         
         <script src="{% static 'js/map.js' %}" async defer></script>
