--- a/src/GPS_Shadow_Tracker_Web/templates/index.html
+++ b/src/GPS_Shadow_Tracker_Web/templates/index.html
@@ -30,6 +30,11 @@
             </form>
         </div>
         <div id="map"></div>
+        <div id="stats">
+            <h1>Mean: <span id="mean"></span></h1>
+            <h1>Min: <span id="min"></span></h1>
+            <h1>Max: <span id="max"></span></h1>
+        </div>
         
         <script src="{% static 'js/map.js' %}" async defer></script>
     </body>
