--- a/src/GPS_Shadow_Tracker_Web/templates/index.html
+++ b/src/GPS_Shadow_Tracker_Web/templates/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>GPS Shadow Tracker</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
@@ -19,8 +19,8 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>MAP APP</h1>
-        <div>
+        <h1 id="title">GPS Shadow Tracker</h1>
+        <div id="timeForm">
             <form id="timeSelect">
                 <label for="startTime">Start Time</label>
                 <input type="time" id="start">
@@ -31,9 +31,9 @@
         </div>
         <div id="map"></div>
         <div id="stats">
-            <h1>Mean: <span id="mean"></span></h1>
-            <h1>Min: <span id="min"></span></h1>
-            <h1>Max: <span id="max"></span></h1>
+            <h2>Mean: <span id="mean"></span></h2>
+            <h2>Min: <span id="min"></span></h2>
+            <h2>Max: <span id="max"></span></h2>
         </div>
         
         <script src="{% static 'js/map.js' %}" async defer></script>
