Added some extra javascript

--- a/src/GPS_Shadow_Tracker_Web/templates/index.html
+++ b/src/GPS_Shadow_Tracker_Web/templates/index.html
@@ -26,6 +26,8 @@
                 <input type="time" id="start">
                 <label for="endTime">End Time</label>
                 <input type="time" id="end">
+                <label for="Min Accuracy">Minimum Accuracy</label>
+                <input type="number" id="minAccuracy" />
                 <input type="submit" id="submitButton">
             </form>
         </div>
