--- a/src/GPS_Shadow_Tracker_Web/static/css/map.css
+++ b/src/GPS_Shadow_Tracker_Web/static/css/map.css
@@ -21,3 +21,22 @@ body {
     justify-content: center;
     gap: 20vw;
 }
+
+@media screen and (max-width: 800px) {
+    #stats {
+        flex-direction: column;
+        align-items: center;
+        gap: 0;
+        padding: 10px;
+    }
+
+    #map {
+        height: 45vh;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    #map {
+        height: 65vh;
+    }
+}
