--- a/src/GPS_Shadow_Tracker_Web/templates/index.html
+++ b/src/GPS_Shadow_Tracker_Web/templates/index.html
@@ -33,7 +33,7 @@
         </div>
         <div id="map"></div>
         <div id="stats">
-            <h2>Mean: <span id="mean"></span></h2>
+            <h2>Median: <span id="mean"></span></h2>
             <h2>Min: <span id="min"></span></h2>
             <h2>Max: <span id="max"></span></h2>
         </div>
