--- a/src/GPS_Shadow_Tracker_App/app/src/main/res/layout/activity_main.xml
+++ b/src/GPS_Shadow_Tracker_App/app/src/main/res/layout/activity_main.xml
@@ -96,4 +96,13 @@
         app:layout_constraintTop_toBottomOf="@+id/accuracyLabelValue"
         tools:text="0" />
 
+    <!--com.google.android.gms.maps.MapView
+        android:id="@+id/gpsMap"
+        android:layout_width="361dp"
+        android:layout_height="380dp"
+        android:layout_marginTop="60dp"
+        android:contentDescription="A Test Map"
+        app:layout_constraintStart_toStartOf="@+id/satelliteLabel"
+        app:layout_constraintTop_toTopOf="@+id/satelliteLabel" /-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
