--- a/src/GPS_Shadow_Tracker_App/app/src/main/res/layout/activity_main.xml
+++ b/src/GPS_Shadow_Tracker_App/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -96,4 +98,18 @@
         app:layout_constraintTop_toBottomOf="@+id/accuracyLabelValue"
         tools:text="0" />
 
+    <fragment
+        android:id="@+id/gpsMap"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="380dp"
+        android:layout_marginTop="48dp"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/satelliteLabel"
+        app:layout_constraintTop_toTopOf="@id/satelliteLabel"
+        />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
