Added a basic websocket to the app

--- a/src/GPS_Shadow_Tracker_Web/templates/index.html
+++ b/src/GPS_Shadow_Tracker_Web/templates/index.html
@@ -39,5 +39,6 @@
         </div>
         
         <script src="{% static 'js/map.js' %}" async defer></script>
+        <script src="{% static 'js/socket.js' %}" async defer></script>
     </body>
 </html>
